--- a/OtoTamir.WEBUI/Views/Shared/Components/_CreateClientViewComponentPartial/Default.cshtml
+++ b/OtoTamir.WEBUI/Views/Shared/Components/_CreateClientViewComponentPartial/Default.cshtml
@@ -1,54 +1,63 @@
 ﻿@model CreateClientDTO
+
 @if (TempData["Message"] != null)
 {
     <div class="alert alert-warning" role="alert">
         @TempData["Message"]
     </div>
 }
+
 <div class="modal-dialog modal-lg">
     <div class="modal-content">
         <form asp-controller="Home" asp-action="CreateClient" method="post">
             <div class="modal-header">
-                 
                 <h5 class="modal-title">Yeni Müşteri Ekle</h5>
                 <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Kapat"></button>
             </div>
-            <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-                            <div class="card-body">
-            <div class="modal-body">
-                <div class="row g-3">
-                    <div class="col-md-6">
-                        <label asp-for="Name" class="form-label"></label>
-                        <input asp-for="Name" class="form-control" />
-                        <span asp-validation-for="Name" class="text-danger"></span>
-                    </div>
 
-                    <div class="col-md-6">
-                        <label asp-for="PhoneNumber" class="form-label"></label>
-                        <input asp-for="PhoneNumber" class="form-control" />
-                        <span asp-validation-for="PhoneNumber" class="text-danger"></span>
-                    </div>
+            <div asp-validation-summary="ModelOnly" class="text-danger small"></div>
 
-                    <div class="col-md-6">
-                        <label asp-for="Balance" class="form-label"></label>
-                        <input asp-for="Balance" class="form-control" />
-                        <span asp-validation-for="Balance" class="text-danger"></span>
-                    </div>
+            <div class="card-body">
+                <div class="modal-body">
+                    <div class="row g-3">
+                        <div class="col-md-6">
+                            <label asp-for="Name" class="form-label"></label>
+                            <input asp-for="Name" class="form-control" required maxlength="50" />
+                            <span asp-validation-for="Name" class="text-danger"></span>
+                        </div>
 
-                    <div class="col-12">
-                        <label asp-for="Notes" class="form-label"></label>
-                        <textarea asp-for="Notes" class="form-control"></textarea>
-                        <span asp-validation-for="Notes" class="text-danger"></span>
-                    </div>
+                        <div class="col-md-6">
+                            <label asp-for="PhoneNumber" class="form-label"></label>
+                            <input asp-for="PhoneNumber" class="form-control" placeholder="05xxxxxxxxx" type="tel"
+                                   pattern="[0-9]*" inputmode="numeric" required minlength="11" maxlength="11" />
+                            <span asp-validation-for="PhoneNumber" class="text-danger"></span>
+                        </div>
 
-                    <input type="hidden" asp-for="ReturnUrl"     />
+
+                        <div class="col-md-6">
+                            <label asp-for="Balance" class="form-label"></label>
+                            <input asp-for="Balance" class="form-control" required min="0" step="10" />
+                            <span asp-validation-for="Balance" class="text-danger"></span>
+                        </div>
+
+                        <div class="col-12">
+                            <label asp-for="Notes" class="form-label"></label>
+                            <textarea asp-for="Notes" class="form-control" maxlength="500"></textarea>
+                            <span asp-validation-for="Notes" class="text-danger"></span>
+                        </div>
+
+                        <input type="hidden" asp-for="ReturnUrl" />
+                    </div>
                 </div>
-            </div>
-            <div class="modal-footer">
-                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Vazgeç</button>
-                <button type="submit" class="btn btn-success">Kaydet</button>
+
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Vazgeç</button>
+                    <button type="submit" class="btn btn-success">Kaydet</button>
+                </div>
             </div>
         </form>
     </div>
 </div>
+
+
 
